--- a/group_1/src/scss/components/_text.scss
+++ b/group_1/src/scss/components/_text.scss
@@ -18,4 +18,12 @@
     line-height: 175%;
 }
 
+.text-primary {
+    margin: 0;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 133.333%;
+}
+
 
