--- a/group_1/src/scss/style.scss
+++ b/group_1/src/scss/style.scss
@@ -12,10 +12,20 @@
 @import './base/common';
 
 // Components
-@import './components/**/*.scss';
+@import './components/animations';
+@import './components/headings';
+@import './components/text';
+@import './components/btn';
+@import './components/form';
+@import './components/dialog';
+@import './components/card';
+@import './components/content';
 
 // Layout
 @import './layout/**/*.scss';
 
 // Pages
 @import './pages/**/*.scss';
+
+// Modals
+@import './modals/**/*.scss';
