Сделали первую секцию и блок с преложением Группа 2

--- a/group_2/src/scss/base/_variables.scss
+++ b/group_2/src/scss/base/_variables.scss
@@ -8,6 +8,7 @@ $mobile-bp: 559.98px;
     // Colors
     --bg-color: #fff;
     --text-color: #000;
+    --text-color-light: #fff;
     --primary-color: #F50E30;
 
     // Fonts
