--- a/group_2/src/scss/pages/_index.scss
+++ b/group_2/src/scss/pages/_index.scss
@@ -1,3 +1,99 @@
+.hero {
+    position: relative;
+    padding-top: 80px;
+    padding-bottom: 150px;
+
+    &__title {
+        max-width: 672px;
+        margin-bottom: 20px;
+    }
+
+    &__text {
+        max-width: 600px;
+        margin-bottom: 44px;
+    }
+
+    &__img {
+        position: absolute;
+        top: -80px;
+        right: -124px;
+        width: 816px;
+    }
+
+    .container {
+        position: relative;
+    }
+}
+
+.offer {
+    padding: 120px 0;
+    background-color: #F4F6F8;
+    
+    &__group {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    &__title {
+        max-width: 1014px;
+        margin-bottom: 24px;
+        text-align: center;
+    }
+
+    &__text {
+        max-width: 943px;
+        margin-bottom: 28px;
+        text-align: center;
+    }
+
+    &__cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 24px;
+        margin-top: 40px;
+        width: 100%;
+    }
+}
+
+.offer-card {
+    position: relative;
+    padding: 24px 32px;
+    height: 264px;
+    background-color: var(--bg-color) ;
+    border-radius: 20px;
+    
+    &__title {
+        margin-bottom: 27px;
+    }
+    
+    &__text {
+        max-width: 300px;
+    }
+    
+    &__img {
+        position: absolute;
+    }
+
+    &:nth-child(1) &__img {
+        bottom: 18px;
+        right: 30px;
+        width: 94px;
+    }
+
+    &:nth-child(2) &__img {
+        bottom: 0;
+        right: 11px;
+        width: 221px;
+    }
+
+    &:nth-child(3) &__img {
+        bottom: 17px;
+        right: 16px;
+        width: 222px;
+    }
+}
+
 .warranty {
     position: relative;
     padding: 100px 0;
