Сделали адаптив с 1 группой

--- a/group_1/src/html/layout/_header.html
+++ b/group_1/src/html/layout/_header.html
@@ -5,12 +5,18 @@
         <!-- Logo -->
         <a class="nav__logo" href="/">
             <picture>
-                <!-- <source srcset="/assets/images/logo.avif" type="image/avif">
-                <source srcset="/assets/images/logo.webp" type="image/webp"> -->
+                <source srcset="/assets/images/logo.avif" type="image/avif">
+                <source srcset="/assets/images/logo.webp" type="image/webp">
                 <img src="/assets/images/logo.png" alt="Логотип компании Купите Автомобиль">
             </picture>
         </a>
         <!-- End Logo -->
+
+        <!-- Burger btn -->
+        <button class="nav__burger toggle-menu reset-btn" type="button">
+            <span></span>
+        </button>
+        <!-- End Burger btn -->
 
         <!-- Menu -->
         <ul class="nav__menu menu reset-list">
