--- a/group_1/src/scss/layout/_container.scss
+++ b/group_1/src/scss/layout/_container.scss
@@ -3,3 +3,9 @@
     max-width: 1280px;
     margin: 0 auto;
 }
+
+@media (max-width: $tablet-bp) {
+    .container {
+        max-width: 984px;
+    }
+}
