--- a/group_1/src/scss/layout/_header.scss
+++ b/group_1/src/scss/layout/_header.scss
@@ -1,4 +1,6 @@
 .header {
+    position: relative;
+    z-index: 10;
     display: flex;
     align-items: center;
     padding: 28px 0;
@@ -12,5 +14,73 @@
 
     &__contacts {
         margin-left: 32px;
+    }
+}
+
+.social {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 12px;
+
+    &__link {
+        & > svg {
+            fill: var(--text-color);
+            transition: all 0.2s ease-in-out;
+        }
+
+        &:hover {
+            & > svg {
+                fill: var(--primary-color);
+            }
+        }
+    }
+}
+
+.contacts {
+    display: flex;
+    align-items: end;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 4px;
+
+    &__link {
+        color: var(--text-color);
+        transition: all 0.2s ease-in-out;
+
+        &:hover {
+            color: var(--primary-color);
+        }
+    }
+}
+
+@media (max-width: $tablet-bp) {
+    .header {
+        padding: 30px 0;
+
+        &__social {
+            margin-right: 90px;
+        }
+    }
+
+    .contacts {
+        position: absolute;
+        top: calc(100% + 445px);
+        right: 0;
+        width: 375px;
+        align-items: center;
+        gap: 14px;
+        transition: opacity 0.2s ease-in-out;
+        opacity: 0;
+        pointer-events: none;
+
+        &__link {
+            font-size: 24px;
+        }
+
+        &_active {
+            opacity: 1;
+            pointer-events: all;
+        }
     }
 }
