--- a/group_1/src/scss/pages/_index.scss
+++ b/group_1/src/scss/pages/_index.scss
@@ -66,6 +66,8 @@
 
     &__cards {
         display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
         gap: 24px;
     }
 }
@@ -73,6 +75,7 @@
 .advanced-card {
     position: relative;
     padding: 24px 32px;
+    width: 410px;
     background: var(--bg-color);
     border-radius: 20px;
     box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.08);
@@ -161,5 +164,205 @@
     &__icon {
         flex-shrink: 0;
         width: 60px;
+    }
+}
+
+.catalog {
+    position: relative;
+    padding: 100px 0;
+    background-color: #F4F6F8;
+
+    &__title {
+        margin-bottom: 20px;
+    }
+
+    &__text {
+        margin-bottom: 40px;
+    }
+}
+
+.catalog-card {
+    display: flex;
+    flex-direction: column;
+    width: 411px;
+    padding: 20px 24px;
+    border-radius: 20px;
+    background-color: #FFF;
+    box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.08);
+
+    &__img {
+        order: 1;
+        margin-bottom: 24px;
+        border-radius: 12px;
+        overflow: hidden;
+    }
+
+    &__title {
+        order: 2;
+        margin-bottom: 16px;
+        font-size: 24px;
+    }
+
+    &__props {
+        order: 3;
+        display: flex;
+        flex-direction: column;
+        row-gap: 16px;
+        margin-bottom: 24px;
+    }
+
+    &__price {
+        order: 4;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 16px;
+
+        span:first-child {
+            width: 173px;
+        }
+    }
+
+    &__price-main {
+        order: 5;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 24px;
+
+        span:first-child {
+            width: 173px;
+        }
+
+        span:last-child {
+            font-weight: 900;
+            color: var(--primary-color);
+        }
+    }
+
+    &__btn {
+        order: 6;
+        width: 100%;
+    }
+}
+
+.catalog-card-prop {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    column-gap: 8px;
+
+    &__name {
+        text-wrap: nowrap;
+    }
+
+    &__dashes {
+        display: block;
+        width: 100%;
+        border-bottom: 1px dashed #C1C1C1;
+    }
+
+    &__value {
+        text-wrap: nowrap;
+    }
+}
+
+.slider {
+    position: relative;
+
+    &__nav {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: calc(100% + 104px);
+        transform: translate(-50%, -50%);
+    }
+
+    &__prev, &__next {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 63px;
+        height: 63px;
+        background-color: var(--primary-color);
+        border-radius: 50%;
+
+        span {
+            position: relative;
+            display: block;
+            width: 15px;
+            height: 2px;
+
+            &::before, &::after {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: #fff;
+                transform-origin: left center;
+                content: '';
+            }
+
+            &::before {
+                transform: rotate(45deg);
+            }
+
+            &::after {
+                transform: rotate(-45deg);
+            }
+        }
+    }
+
+    &__next {
+        span {
+            transform: rotate(180deg);
+        }
+    }
+
+    &__pagination {
+        position: absolute;
+        top: calc(100% + 24px);
+        left: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 8px;
+        width: 100%;
+        transform: translateX(-50%);
+    }
+
+    &__page {
+        position: relative;
+        width: 100px;
+        height: 16px;
+        cursor: pointer;
+
+        &::before {
+            position: absolute;
+            top: 50%;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background-color: rgb(0 0 0  / 0.1);
+            transform: translateY(-50%);
+            content: '';
+        }
+
+        &:hover, &_active {
+            &::before {
+                background-color: var(--primary-color);
+            }
+        }
+    }
+}
+
+@media (max-width: $tablet-bp) {
+    .offer {
+        &__img {
+            right: -400px;
+        }
     }
 }
